# ts-to-python

./: .gitignore  .pre-commit-config.yaml  README.md  extract.ts  generate_types.sh  groupBy.ts  main.ts  package.json  render.ts  tsconfig.json
.circleci/: config.yml
input-projects/browser-dom/: package.json
input-projects/cloudflare-workers/: package-lock.json  package.json  tsconfig.json
input_example/: a.ts  package-lock.json  package.json  tsconfig.json
mypy-tests/: js  pyproject.toml  requirements.txt  test_types.py
tests/: a.test.ts  jest.config.ts  tsconfig.json
type-generation/: adjustments.ts  astToIR.ts  astUtils.ts  extract.ts  irToString.ts  irVisitor.ts  jest.config.js  main.ts  package-lock.json  package.json  prelude.pyi  render.ts  tsconfig-check.json  tsconfig.json  typeToIR.ts  types.ts  varianceConstraints.ts
type-generation-input-project/: a.ts  tsconfig.json
type-generation/src/: adjustments.ts  astToIR.ts  astUtils.ts  extract.ts  groupBy.ts  ir.ts  irToString.ts  logger.ts  main.ts  prelude.pyi  types.ts
type-generation/tests/: a.test.ts  helpers.ts  ir.test.ts
