[project]
name = "dummy"
version = "0"
dependencies = [
    "pyodide-py>=0.28.2",
    "mypy>=1.17.1",
]
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "pytest",
    "pytest-mypy-testing",
    "typing-extensions >= 4.6.0",
]


[tool.mypy]
python_version = "3.12"
show_error_codes = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

# Strict checks
warn_unused_configs = true
check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
